Changed video player svgs & Fixed jumping scrollbar issue

--- a/src/components/Common/UI/Logo/Logo.scss
+++ b/src/components/Common/UI/Logo/Logo.scss
@@ -4,6 +4,7 @@
   align-items: center;
   width: 3rem;
   height: 3rem;
+  margin: 0 1rem;
 
   svg {
     width: 100%;
