--- a/src/components/Layout/Header/Header.scss
+++ b/src/components/Layout/Header/Header.scss
@@ -1,5 +1,5 @@
 .header {
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 8rem;
-  padding: 0 2rem;
+  padding: 0 1rem;
   gap: 2.5rem;
   font-weight: 600;
   text-align: center;
