--- a/src/styles/upload.scss
+++ b/src/styles/upload.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   max-width: 150rem;
-  padding: 2rem;
+  padding: 1rem;
   margin: auto;
   gap: 1rem;
 
