--- a/src/styles/video.scss
+++ b/src/styles/video.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   max-width: 160rem;
-  padding: 2rem;
+  padding: 1rem;
   margin: auto;
   gap: 3rem;
 }
